refactor optimized content retrieval
also: rm boilerpipe (very old, could break app)